Video and gif insertion added

--- a/index.html
+++ b/index.html
@@ -21,10 +21,7 @@
             <div class="comments">
                 <h3>Instructions for step 1</h3>
                 <div class="comment">
-                    <p>
-                        This "class" is scheduled to help you learn basic steps in getting into the 
-                        game design world. 
-                    </p>
+                    <p>This "class" is scheduled to help you learn basic steps in getting into the game design world.</p>
                 </div>
             </div>
         </div>
@@ -34,9 +31,8 @@
             <div class="comments">
                 <h3>Step 2: how to make the character jump</h3>
                 <div class="comment">
-                    <p>
-                        We need to change the code for line 34 so that we can map the button to the action.
-                    </p>
+                    <p>After the explenation here we can add a small gif of the action or example. </p>
+                    <img src="example.gif" alt="Example GIF">
                 </div>
             </div>
         </div>
@@ -44,12 +40,16 @@
             <h2>Step 3</h2>
             <p>Implementing a jump.</p>
             <div class="comments">
-                <h3>Step 3: why are you running?  </h3>
+                <h3>Step 3: why are you running?</h3>
                 <div class="comment">
-                    <p>
-                        We need to change the code for line 34 so that we can map the button to the action.
-                    </p>
+                    <p>Here we will include a sample video of the steps or something similar. </p>
+                    <video controls>
+                        <source src="example.mp4" type="video/mp4">
+                        Your browser does not support the video tag.
+                    </video>
                 </div>
+            </div>
+        </div>
     </main>
 
 </body>
