--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         </div>
         <h1>Game Devs First</h1>
         <nav>
-            <a href="resources.html" class="resource-button">Resources</a>
+            <a href="Resources.html" class="resource-button">Resources</a>
         </nav>
     </header>
 
