--- a/Resources.html
+++ b/Resources.html
@@ -13,6 +13,9 @@
             <img src="logo.png" alt="DTD Game Logo">
         </div>
         <h1>Game Devs First</h1>
+        <nav> 
+            <a href="index.html" class="resource-button">Home</a>
+        </nav>
     </header>
 
     <main>
