Added working links to the page.

--- a/Resources.html
+++ b/Resources.html
@@ -23,12 +23,12 @@
             <h2>Resource Links</h2>
             <div class="resource">
                 <p>Youtube link showing you how to get started on unity.</p>
-                <a href="https://example.com" target="_blank">Example Resource 1</a>
+                <a href="https://www.youtube.com/watch?v=XtQMytORBmM&t=530s" target="_blank">Making Flappy Bird</a>
             </div>
 
             <div class="resource">
                 <p>Tutorial for downloading all the stuff from Github.</p>
-                <a href="https://example.com" target="_blank">Example Resource 2</a>
+                <a href="https://github.com/" target="_blank">Github Home Page</a>
             </div>
             
         </div>
